src/objects/SMS_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>CampaignName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <label>EID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsoCountryCode__c</fullName>
        <label>IsoCountryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageName__c</fullName>
        <label>MessageName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageOrigin__c</fullName>
        <label>MessageOrigin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageText__c</fullName>
        <label>MessageText</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>MessageType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <label>MobileNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SS_CampaignCode__c</fullName>
        <formula>SS_SMS_Message__r.SM_Campaign__r.CA_CampaignCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Campaign__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  SS_SMS_Message__r.SM_Campaign__r.Id  , SS_SMS_Message__r.SM_Campaign__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual SMS Results</relationshipLabel>
        <relationshipName>Sent_SMSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SS_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual SMS Results</relationshipLabel>
        <relationshipName>Sent_SMSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SS_Name__c</fullName>
        <formula>if(isblank( SS_Lead__c ), HYPERLINK(&quot;/one/one.app?source=aloha#/sObject/&quot;&amp;  SS_Contact__c , SS_Contact__r.FirstName &amp; &quot; &quot; &amp; SS_Contact__r.LastName, &quot;_self&quot;),HYPERLINK(&quot;/one/one.app?source=aloha#/sObject/&quot;&amp; SS_Lead__c, SS_Lead__r.FirstName &amp; &quot; &quot; &amp; SS_Lead__r.LastName, &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_NumberOfSMSUsed__c</fullName>
        <label>Number of SMS used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_SMS_Message__c</fullName>
        <label>SMS Message</label>
        <referenceTo>SMS_Message__c</referenceTo>
        <relationshipLabel>Individual SMS Results</relationshipLabel>
        <relationshipName>Sent_SMSs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SS_ToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShortCode__c</fullName>
        <label>ShortCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Resultado de SMS individual</label>
    <nameField>
        <label>MobileMessageTrackingID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resultados de SMSs individuales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>